--- a/site yasmin 3c/style.css
+++ b/site yasmin 3c/style.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
+.lobster-regular {
+    font-family: "Lobster", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 
 :root {
     --cor-de-fundo: #1E1E1E;
@@ -14,7 +20,8 @@
         color: var(--branco);
         font-family: 'Chakra Petch', sans-serif;
     }
-     .conteudo-principal {
+
+    .conteudo-principal {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -44,3 +51,14 @@
         font-size: 18px;
         align-items: center;
         width: 100%;
+    }
+
+    .botoes {
+        display: block;
+    }
+    
+    @media screen and (min-width: 768px) 
+        .botoes {
+            display: flex;
+        }
+
