--- a/site yasmin 3c/style.css
+++ b/site yasmin 3c/style.css
@@ -1,131 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap');
 
-:root {
-    --cor-de-fundo: #ffffff;
-    --verde: #ff00dd;
-    --branco: #000000;
-    --botao-ativo: #fa3aca;
-    --botao-inativo: rgba(255, 0, 200, 0.5);
-    --texto-fundo: rgba(255, 0, 221, 0.3);
+:root{
+    --cor-fundo: #ececec ;
+    --cor-principal: #ececec ;
+    --cor-secundaria: #450074; 
+    --cor-destaque: #470074;
+    --cor-texto: #000000;
+
 }
 
 body {
-    background-color: var(--cor-de-fundo);
-    color: var(--branco);
-    font-family: 'Chakra Petch', sans-serif;
-}
-
-
-.conteudo-principal {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-.titulo-principal {
-    font-family: 'Delius Swash Caps', sans-serif;
-    text-align: left;
-    width: 100%;
-    font-size: 32px;
-}
-
-.titulo-principal span {
-    color: var(--verde);
-}
-
-
-.botao {
-    font-family: 'Delius Swash Caps', sans-serif;
-    background-color: var(--botao-inativo);
-    color: var(--branco);
+    background-color: var(--cor-fundo);
+    color: var(--cor-texto);
     display: flex;
     justify-content: center;
-    padding: 1em;
-    font-size: 18px;
     align-items: center;
-    width: 100%;
-    border-bottom: 4px solid var(--botao-ativo);
-    border-left: 2px solid var(--botao-ativo);
-    border-right: 2px solid var(--botao-ativo);
-    border-top: none;
+    min-height: 100vh;
 }
 
-.botao:first-child {
-    border-radius: 40px 40px 0 0;
-}
-
-.botoes {
-    display: block;
-}
-
-.botao.ativo{
-    background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--verde);
-}
-
-.abas-textos{
-    font-family: 'Delius Swash Caps', sans-serif;
-    background-color: var(--texto-fundo);
-    padding: 40px;
-    border-radius: 0 0 40px 40px;
-}
-.aba-conteudo.ativo{
-    display:block;
-}
-
-.aba-conteudo{
-    display: none;
-}
-
-.aba-conteudo-titulo-principal{
-    font-size: 28px;
+.caixa-principal{
+    background-color: var(--cor-principal);
+    width: 90%;
+    max-width: 600px;
     text-align: center;
-}
-.aba-conteudo-titulo-secundario{
-    text-align: center;
-    color: var(--verde);
-    text-transform: uppercase;
+    padding: 20px;
 }
 
-.contador{
-    display:flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-.contador-digito{
-    font-family: 'Delius Swash Caps', sans-serif;
-    padding: 0 16px;
-    text-align: center;
-    min-width: 100px;
-}
-
-.contador-digito-numero{
-    font-size: 80px;
-    margin: 0;
-
-}
-
-.contador-digito-texto{
-    color: var(--verde);
-    font-size: 20px;
-    margin: 0;
-
-}
-
-@media screen and (min-width: 768px) {
-    .botoes {
-        display: flex;
-    }
-
-    .botao:first-child {
-        border-radius: 40px 0 0 0;
-    }
-
-    .botao:last-child {
-        border-radius: 0 40px 0 0;
-    }
+h1{
+    color: var(--cor-destaque);
+    font-family: 'Love Ya Like A Sister', sem safira;
 }
